# Lithium_Battery_Optimization

./: .gitignore  0_data_cleaning.ipynb  10_balance.py  10_guischema.ipynb  10_guischema.md  1_preprocess.py  2_feature_engineering.ipynb  2_feature_engineering.md  2_mice.ipynb  3_feature_engineering_p2.ipynb  3_feature_engineering_p2.md  3_mice.ipynb  3_mice.py  4_machine_learning.ipynb  4_machine_learning.py  4_vif.ipynb  4_vif.py  5_machine_learning.ipynb  5_mice.py  5_optimization.ipynb  5_optimization.py  6_optimization.py  6_vif.py  7_optimization_engineering.ipynb  7_optimization_engineering.md  8_optimization_training.ipynb  8_optimization_training.md  9_optimization.py  Makefile  README.md  apply_schema_to_df.py  environment.yml  generate_unique_values.py  icon attribution.md  icons attribution.md  paths.py  pyproject.toml  requirements.txt
helpers/: __init__.py  balance.py  constants.py  function_map.py  translation.json
