[project]
name = "LithiumBatteryDesign"
version = "3.0.0"
description = "AI powered tool for designing lithium-ion batteries."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dragon-ml-toolbox[ml]==20.5.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.2",
]
